# eateateat

./: .env.example  .gitignore  deep_research_poc.py  docker-compose.prod.yml  docker-compose.yml  gemini_flash_poc.py  run_pipeline.sh
.claude/: launch.json
admin-frontend/: app.py  requirements.txt
admin-frontend/templates/: articles.html  index.html  kuechen.html  review.html
frontend/: Dockerfile  app.py  requirements.txt
frontend/templates/: _nav.html  _sidebar.html  discover.html  index.html  kuechen.html  landing.html  listen.html  listen_collection.html  restaurant.html  similar.html  tipps.html  tipps_article.html
postgres/: init.sql
postgres/migrations/: 001_pipeline.sql  002_gem_qualify.sql  003_quality_filter.sql  004_critic_fields.sql  005_visual_tags.sql  006_cuisine_neighbors.sql  007_attr_neighbors.sql  008_editorial_articles.sql  009_curation_score.sql  010_collections.sql  011_multi_city.sql  012_jina_search.sql  013_city_cuisine_labels.sql  013_stuttgart_collections.sql  014_london_collections.sql  015_maps_used.sql  016_new_cities.sql
scraper/: Dockerfile  attr_embed.py  backfill_photos.py  compute_curation_score.py  config.py  critic_enrich.py  cuisine_city_dna.py  cuisine_embed.py  db.py  detail_scrape.py  embed.py  enrich.py  foursquare_investigation.py  gem_qualify.py  generate_article.py  image_classifier.py  jina_embed.py  keys.py  pipeline.py  promote_photos.py  pyproject.toml  scrape.py  serper.py  website_scraper.py
