[tool.poetry]
name = "mallorcaeat-scraper"
version = "0.1.0"
description = "Mallorcaeat restaurant scraper, enricher and pipeline"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9"
requests = "^2.31"
google-genai = "^1.65.0"
sentence-transformers = "^3.0"
beautifulsoup4 = "^4.12"
lxml = "^5.0"
Pillow = "^10.0"
python-dotenv = "^1.2.2"


[tool.poetry.group.dev.dependencies]
# add dev tools here if needed

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
